deny-all-np.yaml
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy
metadata:
  name: deny-all-netpol
spec:
  podSelector:
    matchLabels:
      app: web
  ingress: []
